test/message/fail/class-methods-private-brand-check-anonymous.out
# Copyright 2020 the V8 project authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.
*%(basename)s:7: TypeError: Cannot read private member #a from an object whose class did not declare it
  test(obj) { obj.#a(); }
                  ^
TypeError: Cannot read private member #a from an object whose class did not declare it
    at C.test (*%(basename)s:7:19)
    at *%(basename)s:9:9
